Fixed overflow

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -4,21 +4,20 @@
 
 .container {
   padding: map-get(variables.$unit, section);
-  height: map-get(variables.$page, height);
-  width: map-get(variables.$page, width);
   margin: 0 auto;
 
   @media print {
     padding: 0;
+    margin: 0;
   }
 }
 
 .body {
   @include mixins.transition(background-color);
-  min-height: map-get(variables.$page, height);
-  min-width: map-get(variables.$page, width);
   padding: map-get(variables.$unit, section);
   background-color: var(--color--background);
+  height: map-get(variables.$page, height);
+  width: map-get(variables.$page, width);
   box-shadow: var(--shadow);
   box-sizing: border-box;
   flex-wrap: wrap;
