--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -56,6 +56,6 @@ $_dark_colors: ();
 }
 
 :export {
-  primary: map-get($colors, primary),
-  background: map-get($colors, background),
+  primary: map-get($colors, primary);
+  background: map-get($colors, background);
 }
